[project]
name = "epub2pdf-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "ebooklib>=0.20",
    "pypdf>=6.6.0",
    "tqdm>=4.67.1",
    "weasyprint>=68.0",
]
